--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.virtual-host=vhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+
+server.port=8081
